--- a/DesWeb1/Lista E Tabela/src/css/reset.css
+++ b/DesWeb1/Lista E Tabela/src/css/reset.css
@@ -4,6 +4,11 @@
     box-sizing: border-box;
 }
 
+body{
+    background-image: url("../imgs/giphy.gif");
+    background-attachment: fixed;
+}
+
 footer{
     background-color: black;
     color: white;
