--- a/DesWeb1/Atividade Replicacao de um site/src/css/reset.css
+++ b/DesWeb1/Atividade Replicacao de um site/src/css/reset.css
@@ -2,7 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-	width: 100%;
+  max-width: 100%;
+  max-height: 100vh;
+  margin-left: 5px;
 }
 
 body {
@@ -18,6 +20,7 @@ body {
 }
 
 .main__descricao {
+  margin-left: 8px;
   color: #202020;
 }
 .sub {
@@ -29,14 +32,14 @@ body {
 }
 
 .container__image{
-	width: 100%;
+	width: 80%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
 }
 
 .main___imagem-apresentacao {
-  width: 50%;
+  width: 90%;
   height: auto;
   object-fit: cover;
   vertical-align: middle;
