--- a/DesWeb1/Atividade Replicacao de um site/src/css/animantions.css
+++ b/DesWeb1/Atividade Replicacao de um site/src/css/animantions.css
@@ -1,3 +1,13 @@
+ul.ponto-flutuante li::before {
+  content: "";
+  width: 4px;
+  height: 4px;
+  margin-right: 10px;
+  background-color: red;
+  display: inline-block;
+  margin-bottom: 5px;
+}
+
 @keyframes Ani-laminado {
   0% {
     -webkit-transform: scale(0) rotate(45deg);
