--- a/DesWeb1/Atividade Replicacao de um site/src/css/reset.css
+++ b/DesWeb1/Atividade Replicacao de um site/src/css/reset.css
@@ -3,25 +3,31 @@
   padding: 0;
   box-sizing: border-box;
   max-width: 100%;
-  max-height: 100vh;
   margin-left: 5px;
 }
 
 body {
   font-family: "UOLtext", Arial, sans-serif;
-	font-size: 18px;
+  font-size: 18px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
 }
 
-.flex-center{
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+main {
+  max-width: 50%;
 }
 
-.main__descricao {
-  margin-left: 8px;
-  color: #202020;
+.flex-center {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .sub {
   font-size: 14px;
@@ -31,16 +37,18 @@ body {
   margin: 8px;
 }
 
-.container__image{
-	width: 80%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
+.container__image {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
 }
 
 .main___imagem-apresentacao {
-  width: 90%;
-  height: auto;
+  display: flex;
+  width: 900px;
   object-fit: cover;
   vertical-align: middle;
   margin: 16px;
@@ -49,46 +57,70 @@ body {
   -moz-border-radius: 4px;
   -ms-border-radius: 4px;
   -o-border-radius: 4px;
+  flex-direction: column;
+  align-content: center;
+  justify-content: center;
+  align-items: center;
+}
+.main__imagem-descricao {
+  margin-left: 100px;
+  width: 100%;
+}
+img {
+  width: 100%;
+  height: auto;
+  object-fit: cover;
+  vertical-align: middle;
+}
+.main__info {
+  margin-top: 30px;
 }
 
-.main__info{
-	margin-top: 30px;
+.underline {
+  text-decoration: underline;
+}
+.italic {
+  font-style: italic;
 }
 
-.underline{
-	text-decoration: underline;
-}
-.italic{
-	font-style: italic;
-}
-
-h1,
-h2 {
+h1 {
   font-size: 24px;
   font-weight: 700;
   line-height: 32px;
   margin: 18px;
 }
 
-p,li {
-  font-size: 18px;
+h2 {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 40px;
+  margin: 32px 0 32px 0;
+}
+
+p,
+li {
+  font-size: 20px;
   font-weight: 400;
-  line-height: 28px;
-  margin: 18px;
+  line-height: 32px;
 }
 
-ul{
-	list-style-type: none;
-	padding-left: 0;
+ul {
+  list-style-type: none;
+  padding-left: 0;
 }
 
-ul li{
-	padding-bottom: 16px;
+ul li {
+  padding-bottom: 16px;
 }
 
-a{
-	padding-bottom: 1px;
-	text-decoration: none;
-	color: #bb3434;
-	border-bottom: 2px solid #bb3434;
+a {
+  padding-bottom: 1px;
+  text-decoration: none;
+  color: #bb3434;
+  border-bottom: 2px solid #bb3434;
+}
+
+footer {
+  max-width: 50%;
+  margin: 10px;
 }
