--- a/DesWeb1/Seminario de CSS/src/css/style.css
+++ b/DesWeb1/Seminario de CSS/src/css/style.css
@@ -1,20 +1,48 @@
+:root {
+  font-size: 16px;
+}
+
+body {
+  font-family: sans-serif;
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 20px;
+}
+
 .container {
-  width: 50%; /* 50% da largura da tela */
-  margin: 0 auto;
-  padding: 2em; /* 2 vezes o tamanho da fonte */
-  background-color: lightblue;
+  width: 50%;
+  margin: auto;
+  background-color: #fff;
+  padding: 2em;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px;
 }
 
-h1 {
-  font-size: 2rem; /* 2 vezes o tamanho da fonte raiz */
+h1, h2 {
+  text-align: center;
+  margin-bottom: 1em;
 }
 
-p {
-  font-size: 1.5em; /* 1.5 vezes o tamanho da fonte do elemento pai */
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 1em 0;
+}
+
+ul li {
+  margin-bottom: 8px;
+}
+
+input[type="radio"] {
+  margin-right: 5px;
 }
 
 .box {
-  border: 2px solid;
+  border: 4px solid;
   padding: 10px;
   border-radius: 25px;
   width: 100px;
