--- a/DesWeb1/Atividade de Layouts/src/css/layout4.css
+++ b/DesWeb1/Atividade de Layouts/src/css/layout4.css
@@ -2,11 +2,6 @@
     margin: 5px;
 }
 
-img{
-    min-width: 450px;
-    width: 450px;
-}
-
 body{
     font-family: "Helvetica Neue",Helvetica, sans-serif;
 }
@@ -14,14 +9,16 @@ main{
     gap: 0px;
     align-items: flex-start;
 }
+section{
+    gap: 15px;
+    justify-content: space-evenly;
+    background-color: red;
+    width: 100%;
+}
 
 .main__container-item{
     position: relative;
-    width: 450px;
-}
-
-main section .main__container-item img {
-    height: 400px;
+    width: 293px;
 }
 
 .main__container-item p{
@@ -36,12 +33,82 @@ main section .main__container-item img {
     font-size: 21px;
 }
 
-
-main aside .main__container-item img {
-    height: 190px;
+main section .main__container-item img {
+    height: 150px;
+    width: 100%;
 }
 
-aside{
-    min-width: 50%;
-    flex-direction: column;
+/* finish default styles */
+
+
+/* conteiner de videos  */
+.main__container-item.video{
+    width: 293px;
+    height: 180px;
+    flex-wrap: nowrap;
+}
+
+main section .main__container-item.video img {
+    height: 150px;
+    width: 100%;
+}
+
+.main__container-item.video p,
+main section .main__container-item.banner p,
+main section .main__container-item.sugestao p{
+    position: initial;
+    padding: 5px 0;
+}
+
+/* container do banner  */
+main section .main__container-item.banner {
+    height: 250px;
+    flex-wrap: nowrap;
+    background-color: blue;
+}
+
+main section .main__container-item.banner img {
+    height: 217px;
+    width: 100%;
+}
+
+main section .main__container-item.banner p{
+    text-align: center;
+}
+
+/* conteiner gugestao */
+
+main section ul.main__container-item.sugestao {
+    flex-wrap: nowrap;
+    background-color: green;
+    width: 50%;
+}
+
+main section ul.main__container-item.sugestao li {
+    height: 70px;
+    width: 258px;
+    flex-wrap: nowrap;
+    background-color: blue;
+}
+
+main section ul.main__container-item.sugestao li a{
+        display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    align-items: center;
+    flex-direction: row;
+    justify-content: flex-start;
+}
+
+main section ul li a img.thumbnail{
+    width: 137px;
+    height: 70px;
+}
+
+main section .main__container-item.sugestao p{
+    text-align: center;
+}
+
+section.test{
+    background-color: aqua;
 }
