--- a/DesWeb1/Atividade de Layouts/src/css/reset.css
+++ b/DesWeb1/Atividade de Layouts/src/css/reset.css
@@ -114,6 +114,23 @@ header nav {
     margin: 10px 0;
 }
 
+.thumbnail{
+    width: 137px;
+    height: 70px;
+}
+
 .logo {
     margin: 0 10px;
+}
+
+.main__container-item p.descricao{
+    width: 100%;
+    color: white;
+    background-color: #2C2C2C;
+    opacity: 0.7;
+    padding: 20px;
+    margin: 0;
+    position: absolute;
+    bottom: 0;
+    font-size: 21px;
 }
